<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <fr.ganfra.materialspinner.MaterialSpinner
        android:id="@+id/spinnerCity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:ms_alignLabels="true"
        app:ms_alwaysShowFloatingLabel="true"
        app:ms_enableFloatingLabel="true"
        app:ms_arrowColor="@color/dropDownArrowColor"
        app:ms_arrowSize="18dp"
        app:ms_baseColor="@color/colorPrimaryDark"
        app:ms_dropDownHintView="@layout/dropdown_hint_item"
        app:ms_enableErrorLabel="true"
        app:ms_errorColor="@color/errorColor"
        app:ms_floatingLabelColor="@color/colorPrimaryDark"
        app:ms_floatingLabelText="@string/spinner_city"
        app:ms_highlightColor="@color/colorPrimaryDark"
        app:ms_multiline="false"
        app:ms_thickness="1dp"
        app:ms_typeface="fonts/DroidSerif-Regular.ttf"
        app:ms_hintColor="@color/colorGrayText"
        app:ms_hintView="@layout/layout_text_spinner_hint"/>
    <fr.ganfra.materialspinner.MaterialSpinner
        android:id="@+id/spinnerDistrict"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCity"
        app:ms_alignLabels="true"
        app:ms_alwaysShowFloatingLabel="true"
        app:ms_enableFloatingLabel="true"
        app:ms_arrowColor="@color/dropDownArrowColor"
        app:ms_arrowSize="18dp"
        app:ms_baseColor="@color/colorPrimaryDark"
        app:ms_dropDownHintView="@layout/dropdown_hint_item"
        app:ms_enableErrorLabel="true"
        app:ms_errorColor="@color/errorColor"
        app:ms_floatingLabelColor="@color/colorPrimaryDark"
        app:ms_floatingLabelText="@string/spinner_district"
        app:ms_highlightColor="@color/colorPrimaryDark"
        app:ms_multiline="false"
        app:ms_thickness="1dp"
        app:ms_typeface="fonts/DroidSerif-Regular.ttf"
        app:ms_hintColor="@color/colorGrayText"
        app:ms_hintView="@layout/layout_text_spinner_hint"/>
    <fr.ganfra.materialspinner.MaterialSpinner
        android:id="@+id/spinnerStreet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerDistrict"
        app:ms_alignLabels="true"
        app:ms_alwaysShowFloatingLabel="true"
        app:ms_enableFloatingLabel="true"
        app:ms_arrowColor="@color/dropDownArrowColor"
        app:ms_arrowSize="18dp"
        app:ms_baseColor="@color/colorPrimaryDark"
        app:ms_dropDownHintView="@layout/dropdown_hint_item"
        app:ms_enableErrorLabel="true"
        app:ms_errorColor="@color/errorColor"
        app:ms_floatingLabelColor="@color/colorPrimaryDark"
        app:ms_floatingLabelText="@string/spinner_street"
        app:ms_highlightColor="@color/colorPrimaryDark"
        app:ms_multiline="false"
        app:ms_thickness="1dp"
        app:ms_typeface="fonts/DroidSerif-Regular.ttf"
        app:ms_hintColor="@color/colorGrayText"
        app:ms_hintView="@layout/layout_text_spinner_hint"/>
    <fr.ganfra.materialspinner.MaterialSpinner
        android:id="@+id/spinnerLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerStreet"
        app:ms_alignLabels="true"
        app:ms_alwaysShowFloatingLabel="true"
        app:ms_enableFloatingLabel="true"
        app:ms_arrowColor="@color/dropDownArrowColor"
        app:ms_arrowSize="18dp"
        app:ms_baseColor="@color/colorPrimaryDark"
        app:ms_dropDownHintView="@layout/dropdown_hint_item"
        app:ms_enableErrorLabel="true"
        app:ms_errorColor="@color/errorColor"
        app:ms_floatingLabelColor="@color/colorPrimaryDark"
        app:ms_floatingLabelText="@string/spinner_location"
        app:ms_highlightColor="@color/colorPrimaryDark"
        app:ms_multiline="false"
        app:ms_thickness="1dp"
        app:ms_typeface="fonts/DroidSerif-Regular.ttf"
        app:ms_hintColor="@color/colorGrayText"
        app:ms_hintView="@layout/layout_text_spinner_hint"/>
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edtStreetWidth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="(vd: 10)"
        android:textColor="@color/colorText"
        android:textSize="@dimen/text_size_high"
        app:met_typeface="fonts/DroidSerif-Regular.ttf"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerLocation"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelAlwaysShown="true"
        app:met_floatingLabelText="@string/edt_street_width"
        app:met_accentTypeface="fonts/DroidSerif-Regular.ttf"
        app:met_primaryColor="@color/colorPrimaryDark"
        app:met_floatingLabelTextSize="@dimen/text_size_medium"
        android:layout_marginTop="@dimen/margin_top_matterial_edt"/>
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edtLocationAsset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTextLocationAsset"
        android:textSize="@dimen/text_size_high"
        app:met_typeface="fonts/DroidSerif-Regular.ttf"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtStreetWidth"
        android:text="Vị trí 1"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelAlwaysShown="true"
        app:met_floatingLabelText="@string/edt_location_asset"
        app:met_accentTypeface="fonts/DroidSerif-Regular.ttf"
        app:met_primaryColor="@color/colorPrimaryDark"
        app:met_floatingLabelTextSize="@dimen/text_size_medium"
        android:enabled="false"
        android:layout_marginTop="@dimen/margin_top_matterial_edt"/>
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edtFacade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="(vd: 8)"
        android:textColor="@color/colorText"
        android:textSize="@dimen/text_size_high"
        app:met_typeface="fonts/DroidSerif-Regular.ttf"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtLocationAsset"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelAlwaysShown="true"
        app:met_floatingLabelText="@string/edt_facade"
        app:met_accentTypeface="fonts/DroidSerif-Regular.ttf"
        app:met_primaryColor="@color/colorPrimaryDark"
        app:met_floatingLabelTextSize="@dimen/text_size_medium"
        android:layout_marginTop="@dimen/margin_top_matterial_edt" />
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edtAcreage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="(vd: 1000)"
        android:textColor="@color/colorText"
        android:textSize="@dimen/text_size_high"
        app:met_typeface="fonts/DroidSerif-Regular.ttf"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtFacade"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelAlwaysShown="true"
        app:met_floatingLabelText="@string/edt_acreage"
        app:met_accentTypeface="fonts/DroidSerif-Regular.ttf"
        app:met_primaryColor="@color/colorPrimaryDark"
        app:met_floatingLabelTextSize="@dimen/text_size_medium"
        android:layout_marginTop="@dimen/margin_top_matterial_edt" />
    <fr.ganfra.materialspinner.MaterialSpinner
        android:id="@+id/spinnerShape"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtAcreage"
        app:ms_alignLabels="true"
        app:ms_alwaysShowFloatingLabel="true"
        app:ms_enableFloatingLabel="true"
        app:ms_arrowColor="@color/dropDownArrowColor"
        app:ms_arrowSize="18dp"
        app:ms_baseColor="@color/colorPrimaryDark"
        app:ms_dropDownHintView="@layout/dropdown_hint_item"
        app:ms_enableErrorLabel="true"
        app:ms_errorColor="@color/errorColor"
        app:ms_floatingLabelColor="@color/colorPrimaryDark"
        app:ms_floatingLabelText="@string/spinner_shape"
        app:ms_highlightColor="@color/colorPrimaryDark"
        app:ms_multiline="false"
        app:ms_thickness="1dp"
        app:ms_typeface="fonts/DroidSerif-Regular.ttf"
        app:ms_hintColor="@color/colorGrayText"
        app:ms_hintView="@layout/layout_text_spinner_hint"/>
    <fr.ganfra.materialspinner.MaterialSpinner
        android:id="@+id/spinnerMattiepgiap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerShape"
        app:ms_alignLabels="true"
        app:ms_alwaysShowFloatingLabel="true"
        app:ms_enableFloatingLabel="true"
        app:ms_arrowColor="@color/dropDownArrowColor"
        app:ms_arrowSize="18dp"
        app:ms_baseColor="@color/colorPrimaryDark"
        app:ms_dropDownHintView="@layout/dropdown_hint_item"
        app:ms_enableErrorLabel="true"
        app:ms_errorColor="@color/errorColor"
        app:ms_floatingLabelColor="@color/colorPrimaryDark"
        app:ms_floatingLabelText="@string/spinner_mat_tiep_giap"
        app:ms_highlightColor="@color/colorPrimaryDark"
        app:ms_multiline="false"
        app:ms_thickness="1dp"
        app:ms_typeface="fonts/DroidSerif-Regular.ttf"
        app:ms_hintColor="@color/colorGrayText"
        app:ms_hintView="@layout/layout_text_spinner_hint"/>
    <fr.ganfra.materialspinner.MaterialSpinner
        android:id="@+id/spinnerBusinessAdvantage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerMattiepgiap"
        app:ms_alignLabels="true"
        app:ms_alwaysShowFloatingLabel="true"
        app:ms_enableFloatingLabel="true"
        app:ms_arrowColor="@color/dropDownArrowColor"
        app:ms_arrowSize="18dp"
        app:ms_baseColor="@color/colorPrimaryDark"
        app:ms_dropDownHintView="@layout/dropdown_hint_item"
        app:ms_enableErrorLabel="true"
        app:ms_errorColor="@color/errorColor"
        app:ms_floatingLabelColor="@color/colorPrimaryDark"
        app:ms_floatingLabelText="@string/spinner_business_advantage"
        app:ms_highlightColor="@color/colorPrimaryDark"
        app:ms_multiline="false"
        app:ms_thickness="1dp"
        app:ms_typeface="fonts/DroidSerif-Regular.ttf"
        app:ms_hintColor="@color/colorGrayText"
        app:ms_hintView="@layout/layout_text_spinner_hint"/>
    <fr.ganfra.materialspinner.MaterialSpinner
        android:id="@+id/spinnerCoGiaiToa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerBusinessAdvantage"
        app:ms_alignLabels="true"
        app:ms_alwaysShowFloatingLabel="true"
        app:ms_enableFloatingLabel="true"
        app:ms_arrowColor="@color/dropDownArrowColor"
        app:ms_arrowSize="18dp"
        app:ms_baseColor="@color/colorPrimaryDark"
        app:ms_dropDownHintView="@layout/dropdown_hint_item"
        app:ms_enableErrorLabel="true"
        app:ms_errorColor="@color/errorColor"
        app:ms_floatingLabelColor="@color/colorPrimaryDark"
        app:ms_floatingLabelText="@string/spinner_co_giai_toa"
        app:ms_highlightColor="@color/colorPrimaryDark"
        app:ms_multiline="false"
        app:ms_thickness="1dp"
        app:ms_typeface="fonts/DroidSerif-Regular.ttf"
        app:ms_hintColor="@color/colorGrayText"
        app:ms_hintView="@layout/layout_text_spinner_hint"/>


    <gianhadat.online.thuy.view.widget.FontButton
        android:id="@+id/btnCheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Check"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_medium"
        app:custom_font="DroidSerif-Regular"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCoGiaiToa" />
</android.support.constraint.ConstraintLayout>